some updates to add and user guide

--- a/doc/architecture_description_document/architecture_description_document.tex
+++ b/doc/architecture_description_document/architecture_description_document.tex
@@ -43,7 +43,11 @@ Connectors are the primary means by which components communicate with one anothe
 
 Connectors have a few important properties. The first is the connector's \textit{type}. The type of a connector determines the datatypes that can be passed along it. Data passage along a connector is said to occur when that connector is \textit{invoked}. Upon connector invocation, an associated function is called which implements the \textit{behavior} of the connector, usually acting on the transferred data in some way. The \textit{invoker} of a connector is defined as the component which initiates the behavior, while the \textit{invokee} component is defined as the component which is responsible for performing the behavior. In Adamant, two types can be passed along the connector: the \textit{invocation type}, or simply \textit{type}, and the \textit{return\_type}. A connector's \textit{type} is always passed from the \textit{invoker} to the \textit{invokee}, while the \textit{return\_type} is always passed from the \textit{invokee} to the \textit{invoker}.  Each of these types may be arbitrarily complex using compound datatypes such as arrays or structures. Predefined basic types, such as integers or floats, as well as pointers, are also acceptable connector types.
 
-Making the distinction between \textit{invoker} and \textit{invokee} is important when describing the direction and timing of the data flow between components. Because connectors can specify both a \textit{type} and/or a \textit{return\_type}, the direction of data flow can be in the corresponding or opposite direction of the invocation direction. The relationship between the invocation direction and data flow direction is formalized by the connector's \textit{kind}. Unlike connector \textit{types}, which refer to a connector's datatype, connector \textit{kinds} are used to classify the direction and synchroneity of data flow along a connector. Connector kinds fall into one of four categories, whose names correspond to the direction of the data flow with respect to the \textit{invokee}. 
+Making the distinction between \textit{invoker} and \textit{invokee} is important when describing the direction and timing of the data flow between components. Because connectors can specify both a \textit{type} and/or a \textit{return\_type}, the direction of data flow can be in the corresponding or opposite direction of the invocation direction. The relationship between the invocation direction and data flow direction is formalized by the connector's \textit{kind}. Unlike connector \textit{types}, which refer to a connector's datatype, connector \textit{kinds} are used to classify the direction and synchroneity of data flow along a connector.
+
+Connectors can pass data either synchronously or asynchronously. For synchronous connections, the invoker waits for the invokee to finish executing the connector's behavior before continuing on, which is implemented in code as a simple function call. Asynchronous connections involve the invoker serializing the connector data onto the invokee's internal queue for processing at a later time. Any component containing one or more asynchronous connectors will contain a single queue on which the data for these connectors is stored upon invocation.
+
+Connector kinds fall into one of four categories, whose names correspond to the direction of the data flow with respect to the \textit{invokee}.
 
 \begin{enumerate}[{1.}]
   \item \textbf{In Connectors} - One way connectors which simply send data from the \textit{invoker} component to the \textit{invokee} component. These connectors support both synchronous as well as asynchronous communications.
@@ -110,7 +114,7 @@ Components in Adamant are not necessarily associated with a task. A component ca
 
 \begin{itemize}
   \item \textbf{Passive} - \texttt{Passive} components do not have a thread of their own and are expected to execute on the thread of their connector invokers.
-  \item \textbf{Active} - \texttt{Active} components contain their own thread on which they execute.
+  \item \textbf{Active} - \texttt{Active} components contain their own thread on which they execute. Active components are outlined in bold in component diagrams.
   \item \textbf{Either} - \texttt{Either} components are designed to function either as \texttt{passive} or \texttt{active} components. Which \textit{execution} type a component will get resolved to is decided at the assembly level.
 \end{itemize}
 
