--- a/doc/user_guide/user_guide.tex
+++ b/doc/user_guide/user_guide.tex
@@ -1240,10 +1240,10 @@ Adamant aims to solve these problem through the use of \textit{packed types}.  I
 \begin{spaceditemize}
   \item \textbf{\texttt{T}} - A big endian representation of the type. These are the most commonly seen type in Adamant.
   \item \textbf{\texttt{T\_Le}} - A little endian representation of the type. This is usually only used to communicate with little endian specific hardware.
-  \item \textbf{\texttt{U}} - A \textit{native} version of the type whose bit layout has been chosen by the compiler. This is usually the most performant version of the type, but the bit layout changes based on the compiler used, and thus is not portable. This version is often used when performance is a concern, but the layout of the bits does not matter.
+  \item \textbf{\texttt{U}} - A \textit{machine native} version of the type whose bit layout has been chosen by the compiler and often includes padding to optimize for memory alignment. This is usually the most performant version of the type, but the bit layout can change based on the compiler used, and thus is not portable. This version is often used when performance is a concern, but the layout of the bits does not matter.
 \end{spaceditemize}
 
-The \texttt{T} and \texttt{T\_Le} types can be thought of as the \textit{serialized} version of the record, where the bit layout and endianness is known, no matter the compiler or processor that the code is running on. The \texttt{U} version of the type can be thought of as the \textit{native} version of the type, which has been optimized by the compiler for the target processor. For each of the types above Adamant also provides facilities to validate that the values in the type are within range, pretty print the type, check the value of the type during testing via assertions, and produce HTML and PDF documentation for the type. These features are discussed in the following subsections.
+The \texttt{T} and \texttt{T\_Le} types can be thought of as the \textit{serialized} version of the record, where the bit layout and endianness is known, no matter the compiler or processor that the code is running on. The \texttt{U} version of the type can be thought of as the \textit{machine native} version of the type, which has been optimized by the compiler for the target processor. For each of the types above Adamant also provides facilities to validate that the values in the type are within range, pretty print the type, check the value of the type during testing via assertions, and produce HTML and PDF documentation for the type. These features are discussed in the following subsections.
 
 \subsection{Packed Records} \label{Packed Records}
 
