Update Parameters component documentation

--- a/src/components/parameters/doc/parameters.tex
+++ b/src/components/parameters/doc/parameters.tex
@@ -27,6 +27,10 @@
 \subsection{Connectors}
 \input{build/tex/parameters_connectors.tex}
 
+\subsection{Interrupts}
+
+\input{build/tex/parameters_interrupts.tex}
+
 \subsection{Initialization}
 \input{build/tex/parameters_init.tex}
 
@@ -34,19 +38,40 @@
 
 \input{build/tex/parameters_commands.tex}
 
+\subsection{Parameters}
+
+\input{build/tex/parameters_parameters.tex}
+
 \subsection{Events}
 
 \input{build/tex/parameters_events.tex}
 
+\subsection{Data Products}
+
+\input{build/tex/parameters_data_products.tex}
+
+\subsection{Data Dependencies}
+
+\input{build/tex/parameters_data_dependencies.tex}
+
 \subsection{Packets}
 
 \input{build/tex/parameters_packets.tex}
+
+\subsection{Faults}
+
+\input{build/tex/parameters_faults.tex}
 
 \section{Unit Tests}
 
 \input{build/tex/parameters_unit_test.tex}
 
 \section{Appendix}
+
+\subsection{Preamble}
+
+\input{build/tex/parameters_preamble.tex}
+
 \subsection{Packed Types}
 
 \input{build/tex/parameters_types.tex}
